--- a/feedback.css
+++ b/feedback.css
@@ -9,12 +9,11 @@
 /* Style the header */
 .new {
   position: fixed;
-
   background-color: #008080;
   margin-top: -160px;
   margin-left: -30px;
   padding: 25px;
-  width: 98%;
+  width: 102%;
   height: auto;
   text-align: center;
 
@@ -190,4 +189,11 @@ h1 { font-size: 1.5em; margin: 10px; }
 
 .new p{
   text-align:right;
+}
+.footer{
+  position: static;
+  width: 105%;
+  padding: 10px;
+  margin-left: -30px;
+  margin-bottom: -10px;
 }
